# sfsb

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Justfile  TODO.md  askama.toml  build.rs  flake.nix  rust-toolchain.toml
src/: dir.rs  dir_cache.rs  dir_view.rs  download.rs  lib.rs  main.rs  utils.rs
templates/: dir_view.html
tests/: dir_view.rs
