[package]
name = "sfsb"
version = "0.0.5"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sfsb"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.3", features = ["http2"] }
camino = "1.1.6"
chrono = "0.4.31"
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = "0.6.2"
itertools = "0.12.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
parking_lot = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[build-dependencies]
html-minifier = "5.0.0"

[dev-dependencies]
proptest = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false }
scraper = "0.20.0"
tempfile = "3.13.0"
